--- a/springcloud-alibaba-order/src/main/resources/application.yml
+++ b/springcloud-alibaba-order/src/main/resources/application.yml
@@ -1,16 +1,28 @@
 server:
   port: 8091
+  tomcat:
+    max-threads: 10
 spring:
   application:
     name: service-order
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+    url: jdbc:mysql://47.107.128.204/shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: root
+    password: 123456
   jpa:
     properties:
       hibernate:
         hbm2ddl:
           auto: update
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.149.101:8848
+    sentinel:
+      transport:
+        # 与控制台交流的端口, 默认 8719
+        port: 8719
+        # web 控制台地址
+        dashboard: localhost:18080
