--- a/springcloud-alibaba-product/src/main/resources/application.yml
+++ b/springcloud-alibaba-product/src/main/resources/application.yml
@@ -5,12 +5,16 @@ spring:
     name: service-product
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+    url: jdbc:mysql://47.107.128.204/shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: root
+    password: 123456
   jpa:
     properties:
       hibernate:
         hbm2ddl:
           auto: update
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.149.101:8848
