--- a/springcloud-alibaba-user/src/main/resources/application.yml
+++ b/springcloud-alibaba-user/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     name: service-user
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+    url: jdbc:mysql://47.107.128.204/shop?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: root
+    password: 123456
   jpa:
     properties:
       hibernate:
